--- a/html-files/contact.html
+++ b/html-files/contact.html
@@ -5,12 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/CSS/styles.css">
 </head>
 <body>
+    <div class="container">
+        
+    </div>
     <h1>🥐 Contact Us!</h1>
-    <p>To contact croissant.com, please email us at <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info</p>
-    <a href="/">Back to Homepage</a>
-    <a href="/html-files/photo.html">Photo</a>
-    <a href="/html-files/contact.html">Contact</a>
+    <p>To contact croissant.com, please email us at
+        <a class="email" href= "mailto:hello@croissant.com">hello@croissant.com</a> 
+        </p>
+        <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+ 
+                <a href="/">Homepage</a>
+            </div>
+            <div class="col-4">
+ 
+                <a href="/html-files/photo.html">Photo</a>
+            </div>
+            <div class="col-4">
+ 
+                <a href="/html-files/contact.html">Contact</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
