--- a/html-files/photo.html
+++ b/html-files/photo.html
@@ -5,12 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/CSS/styles.css">
 </head>
-<body>
+<body >
     <h1>🥐 Our best products</h1>
     <img src="/img/croissant.jpeg" alt="croissant" >
-    <a href="/">Back to Homepage</a>
-    <a href="/html-files/photo.html">Photo</a>
-    <a href="/html-files/contact.html">Contact</a>
+    </br>
+   <div class="container">
+       <div class="row">
+           <div class="col-4">
+
+               <a href="/">Homepage</a>
+           </div>
+           <div class="col-4">
+
+               <a href="/html-files/photo.html">Photo</a>
+           </div>
+           <div class="col-4">
+
+               <a href="/html-files/contact.html">Contact</a>
+           </div>
+       </div>
+   </div>
 </body>
 </html>
